Revision history for Ocsinventory::Agent

       * Add --nolocal option to desactivate local mode even if it is set in config file or command line
       * Fix Bug #767290 about /etc/sysconfig/ocsinventory-agent server settings ignore (only for Redhat like distributions)
       * Only inventory vitualmachines which have an UUID in VirtualBox.pm to prevent inventoring USB devices or shared folders as virtualmachines
      
2.0 rc4
       * Complety clean the disastrous treatments of accountinfos while receiving it from server,storing it in file and adding it in inventory
       * Fix UTF8 problems due to XML::Simple::XMLIn()

2.0 rc3
       * Fix Bug #720635 about lspci usage on old Linux distributions
       * Fix Bug #720626 about Gentoo packages with hyphen in their names
       * Fix a bug with the use of pacman tool on ArchLinux. We now launch the real packages manager instead of the famous game ;) ;)
       * Avoid perl errors when no answer from OCS server
       * Enhance logging in Snmp.pm and Download.pm when disabling this modules (local mode or prerequisites not OK)
       * Patches from Bernhard Denner to enhance CPU and memry detection on old SUN solaris workstations
       * Patch from Bernhard Denner to enhance dhcp-leases files detection on Linux systems

2.0 rc2
       * Add a new cleanXml() subroutine in Common.pm to clean non printable characters in both standard inventory and SNMP inventory
       * Various patches for Snmp/9.pm module (Cisco)
       * Add a new addSnmpCPU() subroutine in Common.pm
       * Disabling Download.pm if agent running in local mode

2.0 rc1
       * Add download_start_handler to check if Net::SSLeay can be load and disable Download.pm if not
       * Add Net::SNMP optionnal dependency in README file.
       * Delete Win32 from backend
       * Various patches for 9.pm and If_Mib.pm to enhance ethernet ports speed display (François Mermet)
       * New SNMP modules for Juniper, Futjitsu and F5 vendors (François Mermet)